--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-flask
+Flask==2.1.2
 google-api-python-client
 google-auth
 google-auth-oauthlib
-dnspython
+gunicorn==20.1.0
+requests==2.28.1
+dnspython==2.2.1
