--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.1.2
+Flask==2.3.3
 google-api-python-client
 google-auth
 google-auth-oauthlib
+Werkzeug==2.3.7
 gunicorn==20.1.0
 requests==2.28.1
 dnspython==2.2.1
